--- a/app/src/main/res/layout/activity_course_info.xml
+++ b/app/src/main/res/layout/activity_course_info.xml
@@ -42,6 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginTop="15dp"
         android:text="Past Lectures"
         android:textSize="25sp" />
 
